added sub- navbar with categories

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
       </nav>
     </div>
   </header>
+  
+  <!-- Sub Navbar with Categories -->
+<div class="sub-navbar container">
+  <ul class="nav-categories">
+    <li><a href="#">Restaurants</a></li>
+    <li><a href="#">Instamart</a></li>
+    <li><a href="#">Dineout</a></li>
+    <li><a href="#">Swiggy Genie</a></li>
+    <li><a href="#">Offers</a></li>
+  </ul>
+</div>
+
 
   <div class="hero">
     <div class="container hero-inner">
